--- a/report/template/titlepage.tex
+++ b/report/template/titlepage.tex
@@ -18,8 +18,9 @@
  \centering
  \vspace*{0.5 cm}
  \includegraphics[scale = 0.7]{figs/facsa.png}\\[1.0 cm]	% University Logo
- \textsc{\LARGE \newline\newline Faculty of Applied Science}\\[2.0 cm]	% University Name
- \textsc{\Large INFO9015-1 Logic for Computer Science}\\[0.5 cm]				% Course Code
+ \textsc{\Large INFO9015-1 : Logic for Computer Science}\\[1.5 cm]	% University Name
+ \includegraphics*[width=.3\textwidth]{figs/sudoku.png}\\[1.5 cm]
+ \textsc{\LARGE \newline\newline Faculty of Applied Science}\\[0.5 cm]				% Course Code
  \rule{\linewidth}{0.2 mm} \\[0.4 cm]
  {\huge \bfseries \thetitle}\\
  \rule{\linewidth}{0.2 mm} \\[1.5 cm]
@@ -29,6 +30,8 @@
  		\emph{Teacher :}\\
  		Pascal FONTAINE\\
     \vspace{0.5cm}
+    \emph{Assistant :}\\
+    Tanja SCHINDLER\\
  		\end{flushleft}
  		\end{minipage}~
  		\begin{minipage}{0.4\textwidth}
@@ -48,5 +51,7 @@
 % ==============================================================================
 \thispagestyle{empty}
 \tableofcontents
+\listoffigures
+\listoftables
 \pagebreak
 \setcounter{page}{1}
